# ccf-widget

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
binder/: environment.yml  postBuild  requirements.txt
ccfwidget/: __init__.py  allen_id_label.py  ipytree_widget.py  structure_graph.py  structure_mesh.py  swc_morphology.py  treemap_widget.py  widget_ccf.py
examples/: CellTypes.ipynb  NeuropixelProbes.ipynb  NeuropixelUnitsFunctionalMetrics.ipynb  StructureTreeNavigation.ipynb  selected_functional_connectivity_analysis_metrics.csv  selected_unit_metrics.csv  selected_units.csv
